# prog3_true

./: .gitignore  CMakeLists.txt  eigenvalues.mat  eigenvalues_b.mat  eigenvalues_l.mat  experiments.cpp  main.cpp  retry.cpp
GunnerPlayground/: ConsoleApplication1.sln
GunnerPlayground/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
